# i2c_test

./: CMakeLists.txt  STM32F100RBTx.cmake  STM32F100RBTx_FLASH.ld  flash.cfg  nixie_clock.ioc
Inc/: stm32f1xx_hal_conf.h  stm32f1xx_it.h
Src/: main.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c
